# fake-video-detection-engine

./: .gitignore  README.md  app.py  batch_results.txt  batch_test.py  c1_test_output.txt  debug_c3.py  debug_reencode.py  lr_weights.json  main.py  pyproject.toml  reproduce_e2.py  run_tests.py  test_openai_init.py  test_output.txt  test_videos.txt  vid1.txt  vid2.txt  vid3.txt  yt-downloader.py
assets/: trusted_sources.json
features/: 2025 June 16 BBC One minute World News.mp4.json  Biden AI Deepfake Goes TOO FAR – Internet Freaks Out!.mp4.json  Can You Sue ChatGPT？.mp4.json  Could A Giant Sponge Stop A Tsunami 🤔.mp4.json  Deepfake of Zelenskyy Tells Ukrainian Troops to ‘Surrender’.mp4.json  Elon Musk's Deep Fake Video Promoting a Crypto Scam.mp4.json  How do you know you exist？ - James Zucker.mp4.json  Is College A Scam？🤯🎓.mp4.json  Jordan Peele uses AI, President Obama in fake news PSA.mp4.json  Very realistic Tom Cruise Deepfake ｜ AI Tom Cruise.mp4.json  Vi presenterar iPhone 15 ｜ WOW ｜ Apple.mp4.json  google.mp4.json
nodes/: __init__.py  lr_node.py
resources/: trusted_sources.json
results/: batch_results1.txt  batch_results10.txt  batch_results2.txt  batch_results3.txt  batch_results4.txt  batch_results5.txt  batch_results6.txt  batch_results7.txt  batch_results8.txt  batch_results9.txt
scripts/: e_nodes_demo.py
tests/: test_a1_audio_standardization.py  test_a2_vad_asr.py  test_a3_audio_onsets.py  test_api_key.py  test_c1_lip_sync_score.py  test_c2_gesture_check.py  test_c3_extraction.py  test_c3_openai_fallback.py  test_c3_openai_primary.py  (+15 more)
(+22 files in other folders)
