[project]
name = "agenticai-lang-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.0.3",
    "moviepy>=2.2.1",
    "numpy>=2.3.5",
    "openai-whisper>=20250625",
    "scipy>=1.16.3",
    "yt-dlp>=2025.11.12",
]
